terraform/mediawiki/internetgateway.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.local.id
  tags = {
    Name = "main"
  }
}
